database initialization and server updates

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "knex": "^0.14.4"
+    "knex": "^0.14.4",
+    "pg": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.1"
